Ensure Java 8 compatibility in build and RTS templates